fix footer spacing

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -71,13 +71,13 @@
 // footer
 
 .site-footer {
-    height: 300px;
+    height: 60vw;
 }
 
 .site-footer-svg {
     display: block;
     position: absolute;
-    top: 0;
+    top: 7vw;
     left: 50%;
     height: 53vw;
     width: 100vw;
